--- a/src/cedr/gui/simulation_config.json
+++ b/src/cedr/gui/simulation_config.json
@@ -5,11 +5,11 @@
         "FPS": 60,
         "width": 784,
         "height": 784,
-        "gravity_x": 0,
-        "gravity_y": 0,
-        "substrate_density": 33,
-        "particle_density": 1,
-        "particle_radius": 8.75,
-        "particle_velocity": 1200
+        "gravity-x": 0,
+        "gravity-y": 0,
+        "substrate-density": 33,
+        "particle-density": 1,
+        "particle-radius": 8.75,
+        "particle-velocity": 1200
     }
 }
